# GEMORNA

./: Dockerfile  Dockerfile-uv  LICENSE  README.md  docker_build_uv.sh  docker_run_it.sh  environment.yaml  pyproject.toml
checkpoints/: 3utr.pt  5utr.pt  gemorna_3utr.pt  gemorna_5utr.pt  gemorna_cds.pt
src/: generate.py  main_pred3UTR.py  main_pred5UTR.py  tokenization.py
src/models/: gemorna_cds.py  gemorna_utr.py  model_pred3UTR.py
src/shared/: helper.py
src/utils/: utils_cds.py  utils_utr.py
vocab/: cds_vocab.pkl  prot_vocab.pkl
